# rust_moc_gui

./: Cargo.toml  README.md  index.html
.github/workflows/: build.yml  native_release.yml  release.yml  rust.yml
assets/: manifest.json  sw.js
src/: app.rs  commons.rs  creation.rs  infoui.rs  lib.rs  load.rs  load_ascii.rs  load_fits.rs  load_json.rs  main.rs  op1.rs  op2.rs  store.rs  window_options.rs
src/controllers/: creation.rs  op1.rs  op2.rs
src/loaders/: load_ascii.rs  load_json.rs  mod.rs
src/models/: img.rs  load_fits.rs  mod.rs  store.rs
src/op/: creation.rs  mod.rs  op1.rs  op2.rs
src/uis/: creationui.rs  infoui.rs  mod.rs  opui.rs
src/utils/: commons.rs  mod.rs  namestore.rs
src/views/: creationui.rs  infoui.rs  mod.rs  multiple.rs  opui.rs  unitary.rs  windowed.rs
src/windows/: infoui.rs  mod.rs
src/windows/list_window/: info_window.rs  mod.rs
src/windows/main_windows/: creationui.rs  mod.rs  multiple.rs  unitary.rs
