[package]
name = "rust_moc_gui"    
version = "0.1.0"
authors = ["Thibault Dumortier"]
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
egui = "0.21"
eframe = { version = "0.21", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "wgpu",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
log = { version = "0.4", features = ["max_level_trace", "release_max_level_warn"] }
rfd = "0.11"
moc = { git = 'https://github.com/cds-astro/cds-moc-rust', branch = 'main', features = ["storage"] }
wasm-bindgen = { version = "0.2.78", features = ["serde-serialize"]  }
js-sys = "0.3.52"
unreachable = "1.0" 
serde = { version = "1", features = ["derive"] }
healpix = { package = "cdshealpix", version = "0.6.3" }
console_error_panic_hook = "0.1.7"
egui_extras = "0.21"
csv = "1.1.6"
structopt = "0.3"
time = { version = "0.3.3", features = ["parsing"] }
mapproj = "0.3.0"
png = "0.17"

[dependencies.web-sys]
version = "0.3.52"
features = [
  'console',
  'Blob',
  'BlobPropertyBag',
  'Document',
  'Element',
  'Event',
  'File',
  'FileList',
  'FileReader',
  'Headers',
  'HtmlAnchorElement',
  'HtmlElement',
  'HtmlInputElement',
  'HtmlUListElement',
  'Node',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Url',
  'Window',
]

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4"

[profile.release]
opt-level = 2 # fast and small wasm

[patch.crates-io]

[package.metadata.deb]
maintainer = "Thibault Dumortier <thib.dumortier@gmail.com>"
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/cargo-deb", "usr/bin/rust_moc_gui", "755"],
    ["README.md", "usr/share/doc/rust_moc_gui/README", "644"],
]